--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit==1.32.0
-pandas==2.0.3
-numpy==1.24.3
-mlxtend==0.22.0
-plotly==5.18.0
-networkx==3.1
-scikit-learn==1.0.2
-scipy==1.7.3
-statsmodels==0.13.2
-reportlab==4.1.0
-python-docx==1.1.0
-openpyxl==3.1.2
-apscheduler==3.10.4
-python-dotenv==1.0.1 
+streamlit>=1.32.0
+pandas>=2.2.0
+numpy>=1.26.0
+mlxtend>=0.22.0
+plotly>=5.18.0
+networkx>=3.1
+scikit-learn>=1.4.0
+scipy>=1.12.0
+statsmodels>=0.14.1
+reportlab>=4.1.0
+python-docx>=1.1.0
+openpyxl>=3.1.2
+apscheduler>=3.10.4
+python-dotenv>=1.0.1
